--- a/src/Blocks-Elements-Modificators/Container.css
+++ b/src/Blocks-Elements-Modificators/Container.css
@@ -38,3 +38,7 @@
         justify-content: flex-start;
     }
 }
+
+.Container_width_buttons {
+    min-width: fit-content;
+}
